デモンストレーションでのスキーマ指定不具合修正

--- a/IDPSignup/Info.plist
+++ b/IDPSignup/Info.plist
@@ -27,7 +27,7 @@
 			<string>com.irimasu.singupDemo</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>signupdemo:</string>
+				<string>signupdemo</string>
 			</array>
 		</dict>
 	</array>
